--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.19.1",
-    "sass": "^1.23.7",
+    "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "terser-webpack-plugin": "^2.3.0",
     "typescript": "^3.7.3",
