--- a/.gitignore
+++ b/.gitignore
@@ -438,6 +438,7 @@ typings/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/pnpify/
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
