--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ stages:
           - task: Yarn@3
             displayName: "Installing Yarn Packages"
             inputs:
-              arguments: install --immutable
+              arguments: install --freeze-lockfile
 
           - task: Yarn@3
             displayName: "Linting"
@@ -67,7 +67,7 @@ stages:
           - task: Yarn@3
             displayName: "Installing Yarn Packages"
             inputs:
-              arguments: install --immutable
+              arguments: install --freeze-lockfile
 
           - task: Yarn@3
             displayName: "Building JS and CSS"
