--- a/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -19,8 +19,8 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>Blazor SweetAlert SweetAlert2 JSInterop Server Razor</PackageTags>
     <PackageReleaseNotes>
-      Bump sweetalert2
-      Bump @sweetalert2/themes
+      Bump SweetAlert2
+      Make SweetAlertOptions.HideClass updatable
     </PackageReleaseNotes>
   </PropertyGroup>
 
