--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,7 +2,7 @@ pull_request_rules:
   - name: automatic merge on CI success and review - Dependabot
     conditions:
       - status-success=Basaingeal.Razor.SweetAlert2
-      - status-success=DeepCode
+      - status-success=deepcode-ci-bot
       - author=dependabot-preview[bot]
       - base=develop
       - head~=dependabot\/npm_and_yarn\/develop\/(?!sweetalert2).*
