--- a/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -9,7 +9,7 @@
     <Description>
       A Razor class library for interacting with SweetAlert2.
       Use in Blazor Server Apps or Blazor WebAssembly Apps.
-      Currently using sweetalert2@9.15.3
+      Currently using sweetalert2@9.17.0
     </Description>
     <Copyright>Michael J. Currie</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -19,9 +19,8 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>Blazor SweetAlert SweetAlert2 JSInterop Server Razor</PackageTags>
     <PackageReleaseNotes>
-      bump sweetalert2 to 9.15.3
-      bump Microsoft.AspNetCore.Components to 3.1.6
-      bump Microsoft.AspNetCore.Components.Web to 3.1.6
+      bump sweetalert2 to 9.17.0
+      make close button updatable
     </PackageReleaseNotes>
   </PropertyGroup>
 
