--- a/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -9,7 +9,7 @@
     <Description>
       A Razor class library for interacting with SweetAlert2.
       Use in Blazor Server Apps or Blazor WebAssembly Apps.
-      Currently using sweetalert2@9.17.1
+      Currently using sweetalert2@10.1.0
     </Description>
     <Copyright>Michael J. Currie</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -19,8 +19,11 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>Blazor SweetAlert SweetAlert2 JSInterop Server Razor</PackageTags>
     <PackageReleaseNotes>
-      bump sweetalert2 to 9.17.1
-      resolved issue where the popup theme would flicker when using a theme
+      bump sweetalert2 to 10.1.0
+      bump @sweetalert2/themes to 4.0.0
+      The third DENY button
+      New LoaderHtml property
+      New IconColor property
     </PackageReleaseNotes>
   </PropertyGroup>
 
