--- a/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -9,7 +9,7 @@
     <Description>
       A Razor class library for interacting with SweetAlert2.
       Use in Blazor Server Apps or Blazor WebAssembly Apps.
-      Currently using sweetalert2@10.7.0
+      Currently using sweetalert2@10.9.0
     </Description>
     <Copyright>Michael J. Currie</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -19,9 +19,10 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>Blazor SweetAlert SweetAlert2 JSInterop Server Razor</PackageTags>
     <PackageReleaseNotes>
-      bump sweetalert2 to 10.7.0
-      New ReturnInputValueOnDeny  property
-      New Loader CustomClass property
+      bump sweetalert2 to 10.9.0
+      bump @sweetalert2/themes to 4.0.1
+      New PreDeny callback property
+      New functionality on PreConfirm callback
     </PackageReleaseNotes>
   </PropertyGroup>
 
