--- a/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -9,7 +9,7 @@
     <Description>
       A Razor class library for interacting with SweetAlert2.
       Use in Blazor Server Apps or Blazor WebAssembly Apps.
-      Currently using sweetalert2@10.10.1
+      Currently using sweetalert2@10.16.0
     </Description>
     <Copyright>Michael J. Currie</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -22,6 +22,10 @@
       bump sweetalert2
       bump Microsoft.AspNetCore.Components
       bump Microsoft.AspNetCore.Components.Web
+      new CustomClass property: HtmlContainer
+      new CustomClass property: InputLabel
+      new SweetAlertOption property: ReturnFocus
+      new SweetAlertoption property: ShowLoaderOnDeny
     </PackageReleaseNotes>
   </PropertyGroup>
 
