--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "currietechnologies-razorsweetalert2",
+  "name": "@currietechnologies/razorsweetalert2",
   "version": "4.5.0",
   "description": "A Razor class library for interacting with SweetAlert2",
+  "type": "module",
   "scripts": {
-    "build": "SET NODE_ENV=production && webpack --color",
+    "build": "SET NODE_ENV=production && webpack --color --mode=production",
     "build:tsc": "tsc",
     "watch": "webpack --watch",
     "lint": "eslint ./src --ext .ts",
@@ -24,7 +25,7 @@
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "mini-css-extract-plugin": "^1.6.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.0",
+    "css-minimizer-webpack-plugin": "^3.0.0",
     "prettier": "^2.2.1",
     "sass": "^1.34.1",
     "sass-loader": "^12.1.0",
