--- a/babel.config.json
+++ b/babel.config.json
@@ -4,8 +4,7 @@
       "@babel/preset-env",
       {
         "useBuiltIns": false,
-        "debug": false,
-        "corejs": 3
+        "debug": false
       }
     ],
     "@babel/preset-typescript"
