--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,6 +65,13 @@ stages:
               command: custom
               customCommand: "run build"
 
+          - task: UseDotNet@2
+            displayName: 'Use .NET Core sdk'
+            inputs:
+              packageType: 'sdk'
+              version: '6.0.x'
+              includePreviewVersions: true
+
           - task: DotNetCoreCLI@2
             displayName: "Restoring Nuget Packages"
             inputs:
