--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,9 +1,9 @@
 pull_request_rules:
   - name: automatic merge on CI success and review - Dependabot
     conditions:
-      - status-success=Basaingeal.Razor.SweetAlert2
-      - status-success=deepcode-ci-bot
-      - author=dependabot[bot]
+      - check-success=Basaingeal.Razor.SweetAlert2
+      - check-success=security/snyk (Basaingeal)
+      - author~=^dependabot(|-preview)\[bot\]$
       - base=develop
       - head~=dependabot\/npm_and_yarn\/develop\/(?!sweetalert2).*
     actions:
