--- a/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -65,8 +65,8 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="[6.0.0-rc.2.21480.10, 7.0.0)" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="[6.0.0-rc.2.21480.10, 7.0.0)" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="[6.0.0, 7.0.0)" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="[6.0.0, 7.0.0)" />
   </ItemGroup>
   <!-- ReSharper restore UnknownProperty -->
 
