--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/blazor__javascript-interop": "^3.1.2",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "mini-css-extract-plugin": "^2.6.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
     "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
