--- a/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -9,7 +9,7 @@
     <Description>
       A Razor class library for interacting with SweetAlert2.
       Use in Blazor Server Apps or Blazor WebAssembly Apps.
-      Currently using sweetalert2@11.5.0
+      Currently using sweetalert2@11.6.15
     </Description>
     <Copyright>Michael J. Currie</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -22,6 +22,8 @@
     <PackageReleaseNotes>
       bump sweetalert2
       bump @sweetalert2/themes
+      removed explicit support for .NET Core 3.1
+      made IAsyncSweetAlertService interface public
     </PackageReleaseNotes>
   </PropertyGroup>
 
