--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "types": ["sweetalert2", "@blazor/javascript-interop"],
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./src/ts/*.ts"]
+  "include": ["./src/ts/*.ts"],
 }
